Finalized color refresh

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,7 +22,7 @@
                 {% else %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ item.title }}<span class="caret"></span></a>
-                    <ul class="dropdown-menu dropdown-danger">
+                    <ul class="dropdown-menu dropdown-warning">
                         {% for subitem in item.submenu_items %}
                         <li>
                             <a href="{{ subitem.url | relative_url }}">{{ subitem.title }}</a>
