--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -35,7 +35,7 @@ layout: base
                     {{ content }}
                 </div>
                 {% if page.credits %}
-                <div class="separator separator-danger"><img src="{{ '/assets/img/martlet-danger.svg' | relative_url }}" height="35rem" /></div>
+                <div class="separator separator-info"><img src="{{ '/assets/img/martlet-info.svg' | relative_url }}" height="35rem" /></div>
                 <div class="">{{ page.credits | markdownify }}</div>
                 {% endif %}
             </div>
