--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,7 +56,8 @@
     <link href="{{ '/assets/css/ribbonrack.css' | relative_url }}" rel="stylesheet" />
 
     <!--     Fonts and icons     -->
-    <link href='https://fonts.googleapis.com/css?family=Cambo|Lato:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cambo|Lato:400,500,600,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700;800&family=Spectral:wght@400;700&display=swap" rel="stylesheet">
     <link href="{{ '/assets/css/fonts/pe-icon-7-stroke.css' | relative_url }}" rel="stylesheet">
     <link href="{{ '/assets/css/cookiealert.css' | relative_url }}" rel="stylesheet" />
 </head>
