--- a/assets/css/jameshoward.scss
+++ b/assets/css/jameshoward.scss
@@ -127,7 +127,7 @@ $font-weight-semi:           500 !default;
 $font-weight-bold:           600 !default;
 
 $sans-serif-font:            'Lato', "Helvetica Neue", Helvetica, Arial, sans-serif;
-$serif-font:                 'Cambo','Times New Roman',serif;
+$serif-font:                 'Cinzel','Times New Roman',serif;
 
 $line-height-general:          1.5 !default;
 $line-height:                 20px !default;
