--- a/assets/css/gaia/_typography.scss
+++ b/assets/css/gaia/_typography.scss
@@ -40,11 +40,12 @@ h4,
 h5,
 .h5,
 h6,
-.h6,
-.content-blog p{
+.h6 {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     font-family: jameshoward.$serif-font;
+    font-weight: 500;
+    letter-spacing: 0.03em; // or try 0.03em, depending on your taste
 
     a{
         font-size: inherit;
@@ -52,9 +53,19 @@ h6,
     }
 }
 
+.sans-serif {
+  font-family: jameshoward.$sans-serif-font;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+}
+
+
 .content-blog{
     padding: 30px 0;
     p{
+        font-family: jameshoward.$sans-serif-font;
+        font-weight: 500;
+        letter-spacing: 0.03em;
         font-size: 18px;
         margin-bottom: 30px;
     }
