--- a/assets/css/gaia/_typography.scss
+++ b/assets/css/gaia/_typography.scss
@@ -44,7 +44,7 @@ h6,
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     font-family: jameshoward.$serif-font;
-    font-weight: 500;
+    font-weight: 600;
     letter-spacing: 0.03em; // or try 0.03em, depending on your taste
 
     a{
@@ -57,16 +57,25 @@ h6,
   font-family: jameshoward.$sans-serif-font;
   font-weight: 500;
   letter-spacing: 0.03em;
+  font-size: 18px;
+  margin-bottom: 30px;
 }
 
+figcaption {
+  font-family: jameshoward.$sans-serif-font;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+}
 
 .content-blog{
     padding: 30px 0;
-    p{
+    p,li {
         font-family: jameshoward.$sans-serif-font;
         font-weight: 500;
         letter-spacing: 0.03em;
         font-size: 18px;
+    }
+    p {
         margin-bottom: 30px;
     }
 }
