--- a/_includes/jsloads.html
+++ b/_includes/jsloads.html
@@ -6,7 +6,17 @@
 <script type="text/javascript" src="{{ '/assets/js/modernizr.js' | relative_url }}"></script>
 
 <!-- MathJAX -->
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+  window.MathJax = {
+    tex: {
+      packages: ['base', 'mhchem', 'color', 'bbox', 'cancel']
+    },
+    loader: {
+      load: ['[tex]/mhchem', '[tex]/color', '[tex]/bbox', '[tex]/cancel']
+    }
+  };
+</script>
+<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
 <script src="https://kit.fontawesome.com/42a187197b.js" crossorigin="anonymous"></script>
 
