Rotate bumpers to new kamon

--- a/_includes/relatedposts.html
+++ b/_includes/relatedposts.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="title-area">
             <h2>Related Posts</h2>
-            <div class="separator separator-info"><img src="{{ '/assets/img/martlet-info.svg' | relative_url }}" height="35rem" /></div>
+            <div class="separator separator-info"><img src="{{ '/assets/img/kamon-info.svg' | relative_url }}" height="35rem" /></div>
         </div>
 
         <div id="masonry-container" class="row">
