--- a/assets/css/gaia/_sections.scss
+++ b/assets/css/gaia/_sections.scss
@@ -159,6 +159,16 @@
         }
     }
 
+    .separator-warning {
+        color: jameshoward.$warning-color;
+
+        &:before,
+        &:after{
+            border-color: jameshoward.$warning-color;
+        }
+    }
+
+
     &.filter-color-black:before{
         background: #333;
     }
