--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@ layout: base
         <div class="container">
             <div class="content">
                 <h1>{{ title | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
-                <div class="separator separator"><img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" /></div>
+                <div class="separator separator"><img src="{{ '/assets/img/identity/kamon.svg' | relative_url }}" height="35rem" /></div>
                 <span class="card-category section-subtitle">{{ subtitle | markdownify }}</span>
                 </div>
             </div>
@@ -35,7 +35,7 @@ layout: base
                     {{ content }}
                 </div>
                 {% if page.credits %}
-                <div class="separator separator-info"><img src="{{ '/assets/img/martlet-info.svg' | relative_url }}" height="35rem" /></div>
+                <div class="separator separator-info"><img src="{{ '/assets/img/identity/kamon-info.svg' | relative_url }}" height="35rem" /></div>
                 <div class="">{{ page.credits | markdownify }}</div>
                 {% endif %}
             </div>
