--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -24,11 +24,11 @@ sitemap:
       <a href="{{ post.permalink | relative_url }}" class="card-title">
         <h3>{{ post.title }}</h3>
       </a>
-      <h6 class="card-category text-warning"><nobr>&bull;&nbsp;
+      <h6 class="card-category text-info"><nobr>&bull;&nbsp;
         {% for tag in post.tags %}
         {% capture tag_name %}{{ tag }}{% endcapture %}
         {% assign tag_slug = tag_name | slugify %}
-        <a href="{{ '/tag/' | append: tag_slug | relative_url }}" class="card-category text-warning" style="display: inline;">{{ tag_name }}</a>&nbsp;&bull;&nbsp;</nobr>
+        <a href="{{ '/tag/' | append: tag_slug | relative_url }}" class="card-category text-info" style="display: inline;">{{ tag_name }}</a>&nbsp;&bull;&nbsp;</nobr>
         {% endfor %}
       </h6>
     </div>
