Fix really small screens

--- a/assets/css/jameshoward.css
+++ b/assets/css/jameshoward.css
@@ -249,6 +249,20 @@ figure {
   .content h1 {
     font-size: 180%;
   }
+
+  .footer .row .info .title {
+    text-align:left !important; ;
+    margin-left: 2em;
+    margin-bottom:10px;
+    font-size:15px;
+    font-weight:bold
+  }
+
+  footer .row .info ul {
+    text-align:left !important; ;
+    margin-left: 2.25em;
+  }
+
 }
 
 @media (min-width: 768px) {
