--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: base
         <div class="container">
             <div class="content">
                 <h1>{{ page.title }}</h1>
-                <h3 class="subtitle">{{ page.date | date: "%A %B %d, %Y" }}</h3>
+                <h3 class="subtitle">{{ page.date | date: "%A, %B %d, %Y" }}</h3>
                 <div class="separator separator"><img src="{{ '/assets/img/identity/kamon.svg' | relative_url }}" height="35rem" /></div>
                 <div class="card-blog">
                     <h6 class="card-category text-warning"><nobr>&bull;&nbsp;
