Added a new head modification scheme

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,4 +60,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700;800&family=Spectral:wght@400;700&display=swap" rel="stylesheet">
     <link href="{{ '/assets/css/fonts/pe-icon-7-stroke.css' | relative_url }}" rel="stylesheet">
     <link href="{{ '/assets/css/cookiealert.css' | relative_url }}" rel="stylesheet" />
+
+    {% if page.head_additions %}
+       {{ page.head_additions }}
+    {% endif %}
 </head>
