--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
     {% endif %}
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>{{ title }}</title>
+    <title>{{ title_clean }}</title>
 
     <meta name="title" content="{{ title }}" />
     <meta name="author" content="James" />
