--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ layout: base
 <div class="section section-header-blog">
     <div class="parallax filter filter-color-black">
         {% if page.featured_image %}
-        <div class="image" style="background-image:url({{ page.featured_image | relative_url }})"></div>
+            {% picture header {{ page.featured_image | remove_first: '/assets/img/' }} class="featured-bg" widths="test" %}
         {% else %}
-        <div class="image" style="background-image:url({{ '/assets/img/header-home.webp' | relative_url }})"></div>
+            {% picture header header-home.webp class="featured-bg" %}
         {% endif %}
         <div class="container">
             <div class="content">
@@ -29,15 +29,16 @@ layout: base
 </div>
 
 {% if page.featured_image %}
+{% assign hero_image = page.featured_image | default: 'header-home.webp' %}
 <div class="container">
-    <div class="row featured-image-post">
-        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"></div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-            <div class="card">
-                <img src="{{ page.featured_image | relative_url }}" class="image-header">
-            </div>
-        </div>
+  <div class="row featured-image-post">
+    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"></div>
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="card">
+        {% picture {{ hero_image | remove_first: '/assets/img/' }} class="image-header" alt="{{ page.title | escape }}" %}
+      </div>
     </div>
+  </div>
 </div>
 {% endif %}
 
